@@ -1,3 +1,9 @@
+2007-11-29 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/DataViews/_RepositoryView.py:
+	* src/gen/db/base.py:
+	* src/DisplayModels/_RepositoryModel.py:
+	Added a change column in repoview, model, database column storage
+
 2007-11-29  Douglas S.Blank  <dblank@cs.brynmawr.edu>
 	* po//POTFILES.in: renamed PluginStatus.py -> PluginWindows.py
 
